[package]
name = "hue"
version = "0.1.0"
authors = ["Dominik Russo"]
license = "GPL-3.0-only"
edition = "2021"
rust-version = "1.56.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
huelib = "0.13.2"
structopt = "0.3.25"
xdg = "2.4.0"
